dev/platform/rollouts/dashboard-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
  annotations:
    cert-manager.io/cluster-issuer: jianggan-ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rollouts.jianggan.cn
      secretName: rollouts-jianggan-cn-tls
  rules:
    - host: rollouts.jianggan.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
